CXXFLAGS = -Wall -g -O2 -fPIC
CFLAGS = -DLUA_USE_LINUX -Wall -g -O2

noinst_LIBRARIES = libchaos_mylua.a
libchaos_mylua_a_LIBFLAGS =
libchaos_mylua_a_LIBADD =

libchaos_mylua_a_SOURCES = \
		lua-5.1.4/src/ldo.c \
		lua-5.1.4/src/lcode.c \
		lua-5.1.4/src/lauxlib.c \
		lua-5.1.4/src/lstrlib.c \
		lua-5.1.4/src/ldblib.c \
		lua-5.1.4/src/lundump.c \
		lua-5.1.4/src/lopcodes.c \
		lua-5.1.4/src/lbaselib.c \
		lua-5.1.4/src/lapi.c \
		lua-5.1.4/src/lua.c \
		lua-5.1.4/src/lmathlib.c \
		lua-5.1.4/src/lmem.c \
		lua-5.1.4/src/lparser.c \
		lua-5.1.4/src/lvm.c \
		lua-5.1.4/src/ltable.c \
		lua-5.1.4/src/lfunc.c \
		lua-5.1.4/src/llex.c \
		lua-5.1.4/src/ldump.c \
		lua-5.1.4/src/lobject.c \
		lua-5.1.4/src/loadlib.c \
		lua-5.1.4/src/liolib.c \
		lua-5.1.4/src/lgc.c \
		lua-5.1.4/src/lzio.c \
		lua-5.1.4/src/ltablib.c \
		lua-5.1.4/src/ltm.c \
		lua-5.1.4/src/lstring.c \
		lua-5.1.4/src/linit.c \
		lua-5.1.4/src/loslib.c \
		lua-5.1.4/src/luac.c \
		lua-5.1.4/src/print.c \
		lua-5.1.4/src/ldebug.c \
		lua-5.1.4/src/lstate.c \
		mylua.cpp \
		lua_table.cpp \
		lua_type.cpp \
		lua_object.cpp

